# vesper

./: .replit  =1.15  MIGRATION_GUIDE.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  replit.nix
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--Server-Running-Output-localhost-8000-INFO-Will-watch-f_1776206615874.txt  Pasted--domain-chatgpt-com-expirationDate-1775834233-37294-hos_1775832490312.txt  Pasted--domain-chatgpt-com-expirationDate-1776433205-289262--1_1775828913501.txt  Pasted--domain-grok-com-expirationDate-1775823515-889848-hostO_1775821908697.txt  Pasted-You-are-Vesper-Orchestrator-the-central-most-powerful-a_1775851460085.txt  Pasted-You-are-Vesper-Orchestrator-the-ultimate-all-in-one-AI-_1775850983622.txt  Pasted-You-are-Vesper-Research-Scholar-Vesper-s-elite-autonomo_1775851220729.txt  Pasted-You-are-Vesper-Search-Master-Vesper-s-ultimate-everythi_1775851360965.txt  Pasted-You-are-Vesper-s-Autonomous-Agent-a-world-class-fully-a_1775850381330.txt  Pasted-You-are-a-senior-React-Tailwind-UI-engineer-who-built-t_1775852965037.txt  Pasted-You-are-a-senior-UI-UX-designer-and-React-developer-who_1775846358465.txt  Pasted-You-are-a-senior-frontend-engineer-who-built-the-file-e_1775845729798.txt  Pasted-You-are-a-senior-product-designer-and-frontend-engineer_1775846134962.txt  Pasted-You-are-an-expert-Python-developer-and-AI-coding-agent-_1775850732475.txt  Pasted-You-are-an-expert-React-TypeScript-frontend-engineer-bu_1775842943473.txt  Pasted-You-are-an-expert-full-stack-Python-developer-Build-a-c_1775761051977.txt  (+20 more)
(+89 files in other folders)
